update gluten velox results with 3TB dataset
Signed-off-by: Manabu McCloskey <manabu.mccloskey@gmail.com>